--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   "author": "Cibercom",
   "license": "UNLICENSED",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@heroicons/react": "^2.2.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "xlsx": "^0.18.5"
   },
