--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
   "author": "Cibercom",
   "license": "UNLICENSED",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.3.3",
+    "@types/react-color": "^3.0.13",
+    "axios": "^1.12.2",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
+    "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "xlsx": "^0.18.5"
