--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=http://localhost:8091/api
+VITE_API_BASE_URL=http://localhost:8080/api
+VITE_PAC_BASE_URL=http://localhost:8085/api
