--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.3.3",
     "@types/react-color": "^3.0.13",
-    "axios": "^1.12.2",
+    "axios": "^1.13.1",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-color": "^2.19.3",
@@ -32,9 +35,13 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.0.2",
     "vite": "^5.0.0"
   }
