--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "save": "^2.9.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
